Added 2 new quests, that need story written.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,2 @@
-Made it load after TerraGuardians mod, to avoid the mod dialogue changes from breaking.
+New Quests Added:
+ => "Boom!" from the Demolitionist.
